# http-server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  main.cpp
.github/workflows/: cmake.yml
html/: index.html  main_page.html
src/common/: common.h
src/listener/: listener.cpp  listener.h
src/session/: handle_request.h  session.cpp  session.h  ws_session.cpp  ws_session.h
src/session/http/: http_session.cpp  http_session.h
src/session/websocket/: ws_session.cpp  ws_session.h
src/state/: state.cpp  state.h
